[gd_scene load_steps=4 format=2]

[ext_resource path="res://PauseMenu/DebugMenu/DebugMenu.gd" type="Script" id=1]
[ext_resource path="res://OutlinedPolygon2D/OutlinedPolygon2D.gd" type="Script" id=2]
[ext_resource path="res://SelectionsList/SelectionsList.tscn" type="PackedScene" id=3]

[node name="DebugMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Frame" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 224, 0, 224, 480, 0, 480, 0, 0 )
script = ExtResource( 2 )

[node name="SelectionsList" parent="." instance=ExtResource( 3 )]
position = Vector2( 21, 8 )
[connection signal="option_selected" from="." to="." method="_on_DebugMenu_option_selected"]
